--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -1,12 +1,14 @@
 @use "./base" as *;
 
-.story{
-
-    &__content {
-        background-color: $color-primary;
-    }
+.story {
 
     &__pictures {
         background-color: $color-grey-light-1;
+        grid-column: full-start / col-end 4;
+    }
+
+    &__content {
+        background-color: $color-primary;
+        grid-column:  col-start 5 / full-end ;
     }
 }
