--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -1,14 +1,53 @@
 @use "./base" as *;
 
 .story {
-
     &__pictures {
-        background-color: $color-grey-light-1;
+        background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../img/back.jpg);
+        background-size: cover;
         grid-column: full-start / col-end 4;
+        display: grid;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(6, 1fr);
+        align-items: center;
+    }
+
+    &__img--1 {
+        width: 100%;
+        grid-column: 2 / span 4;
+        grid-row: 2 / span 4;
+        box-shadow: 0 2rem 5rem rgba(black, .1);
+    }
+
+    &__img--2 {
+        width: 115%;
+        grid-column: 4 / span 3;
+        grid-row: 4 / span 2;
+        z-index: 10;
+        box-shadow: 0 2rem 5rem rgba(black, .2);
     }
 
     &__content {
-        background-color: $color-primary;
-        grid-column:  col-start 5 / full-end ;
+        background-color: $color-grey-light-1;
+        grid-column:  col-start 5 / full-end;
+        padding: 6rem 8vw;
+
+        //Aligning content using display flex
+
+        /*display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;*/
+
+        //Aligning content using display grid
+        
+        display: grid;
+        align-content: center;
+        justify-items: start;
+    }
+
+    &__text {
+        font-size: 1.5rem;
+        font-style: italic;
+        margin-bottom: 4rem;
     }
 }
