--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -3,5 +3,36 @@
 .sidebar {
     background-color: $color-primary;
     grid-column: sidebar-start / sidebar-end;
-    grid-row: 1 / -1
+    grid-row: 1 / -1;
+    padding: 1.7rem;
+}
+
+.nav__btn {
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    border: none;
+    position: relative;
+    top: 15px;
+
+    &::before {
+        content: "";
+        width: 100%;
+        height: 2px;
+        background-color: white;
+        border: none;  
+        position: absolute;
+        top: -15px;
+        left: 0;
+    }
+    &::after {
+        content: "";
+        width: 100%;
+        height: 2px;
+        background-color: white;
+        border: none;  
+        position: absolute;
+        top: 15px;
+        left: 0;
+    }
 }
