--- a/sass/main.css
+++ b/sass/main.css
@@ -91,6 +91,36 @@ body {
   background-color: #c69963;
   grid-column: sidebar-start/sidebar-end;
   grid-row: 1/-1;
+  padding: 1.7rem;
+}
+
+.nav__btn {
+  width: 100%;
+  height: 2px;
+  background-color: white;
+  border: none;
+  position: relative;
+  top: 15px;
+}
+.nav__btn::before {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: white;
+  border: none;
+  position: absolute;
+  top: -15px;
+  left: 0;
+}
+.nav__btn::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: white;
+  border: none;
+  position: absolute;
+  top: 15px;
+  left: 0;
 }
 
 .header {
