--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,6 +1,41 @@
 @use "./base" as *;
 
 .header {
-    background-image: linear-gradient(rgba($color-secondary, .9), rgba($color-secondary, .9)), url(../img/house-3.jpeg);
+    background-image: linear-gradient(rgba($color-secondary, .93), rgba($color-secondary, .93)), url(../img/house-3.jpeg);
+    background-position: center;
+    background-size: cover;
     grid-column: full-start / col-end 6;
+    padding: 8rem;
+    padding-top: 4rem;
+
+    display: grid;
+    grid-template-rows: 1fr min-content 6rem 1fr;
+    grid-template-columns: max-content;
+    grid-row-gap: 1.5rem;
+    justify-content: center;
+
+    &__logo {
+        height: 3rem;
+        justify-self: center;
+    }
+
+    &__btn {
+        align-self: start;
+        justify-self: start;
+    }
+
+    &__seenon-text {
+
+    }
+
+    &__seenon-logos {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 3rem;
+        justify-items: center;
+        img {
+            height: 2.5rem;
+            filter: brightness(70%);
+        }
+    }
 }
