--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -25,7 +25,19 @@
     }
 
     &__seenon-text {
+        display: grid;
+        grid-template-columns: 1fr max-content 1fr;
+        font-size: 1.6rem;
+        color: $color-grey-light-2;
+        align-items: center;
+        gap: 1.5rem;
 
+        &::before, &::after {
+            content: "";
+            height: 1px;
+            display: block;
+            background-color: currentColor;
+        }
     }
 
     &__seenon-logos {
