--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -10,12 +10,25 @@
     justify-items: center;
     grid-row-gap: 2rem;
 
+    @media (max-width: $bp-medium) {
+        grid-column: 1 / -1;
+        grid-row: 3 / 4;
+    }
+
     &__list {
         display: grid;
         grid-template-columns: min-content max-content;
         grid-column-gap: 2rem;
         grid-row-gap: 5vh;
         align-items: center;
+
+        @media (max-width: $bp-medium) {
+            grid-template-columns: repeat(3, min-content max-content);
+        }
+
+        @media (max-width: $bp-small) {
+            grid-template-columns: min-content max-content;
+        }
     }
 
     &__img {
