--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -4,36 +4,53 @@
     background-color: $color-primary;
     grid-column: sidebar-start / sidebar-end;
     grid-row: 1 / -1;
-    padding: 1.7rem;
+
+    display: flex;
+    justify-content: center;
+
+    @media (max-width: $bp-large) {
+        grid-column: 1 / -1;
+        grid-row: 1 / 2;
+        justify-content: flex-end;
+        align-items: center;
+    }
 }
 
 .nav__btn {
-    width: 100%;
-    height: 2px;
-    background-color: white;
     border: none;
-    position: relative;
-    top: 15px;
+    border-radius: 0;
+
+    background-color: #fff;
+    height: 2px;
+    width: 4.5rem;
+    margin-top: 4rem;
     cursor: pointer;
 
-    &::before {
-        content: "";
-        width: 100%;
-        height: 2px;
-        background-color: white;
-        border: none;  
-        position: absolute;
-        top: -15px;
-        left: 0;
-    }
+    &::before,
     &::after {
-        content: "";
-        width: 100%;
+        background-color: #fff;
         height: 2px;
-        background-color: white;
-        border: none;  
-        position: absolute;
-        top: 15px;
-        left: 0;
+        width: 4.5rem;
+        content: "";
+        display: block;
+    }
+
+    &::before { 
+        transform: translateY(-1.5rem); 
+    }
+    &::after { 
+        transform: translateY(1.3rem); 
+    }
+
+    @media (max-width: $bp-large) {
+        margin-top: 0;
+        margin-right: 3rem;
+
+        &::before { 
+            transform: translateY(-1.2rem); 
+        }
+        &::after { 
+            transform: translateY(1.0rem); 
+        }
     }
 }
