--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -9,6 +9,11 @@
         grid-template-rows: repeat(6, 1fr);
         grid-template-columns: repeat(6, 1fr);
         align-items: center;
+
+        @media (max-width: $bp-medium) {
+        grid-column: 1/ -1;
+        padding: 3rem;
+        }
     }
 
     &__img--1 {
@@ -16,6 +21,11 @@
         grid-column: 2 / span 4;
         grid-row: 2 / span 4;
         box-shadow: 0 2rem 5rem rgba(black, .1);
+
+        @media (max-width: $bp-medium) {
+            grid-column: 2 / 5;
+            grid-row: 1 / -1;
+            }
     }
 
     &__img--2 {
@@ -24,6 +34,12 @@
         grid-row: 4 / span 2;
         z-index: 10;
         box-shadow: 0 2rem 5rem rgba(black, .2);
+
+        @media (max-width: $bp-medium) {
+            grid-column: 4 / 6;
+            grid-row: 1 / -1;
+            width: 100%;
+            }
     }
 
     &__content {
@@ -43,6 +59,11 @@
         display: grid;
         align-content: center;
         justify-items: start;
+
+        @media (max-width: $bp-medium) {
+            grid-row: 5/ 6;
+            grid-column: 1/ -1;
+            }
     }
 
     &__text {
