--- a/sass/main.css
+++ b/sass/main.css
@@ -271,6 +271,7 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   gap: 6rem;
   align-items: start;
+  opacity: 0;
 }
 
 .feature {
