--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,64 +1,69 @@
 @use "./base" as *;
 
 .header {
-    background-image: linear-gradient(rgba($color-secondary, .93), rgba($color-secondary, .93)), url(../img/house-3.jpeg);
-    background-position: center;
-    background-size: cover;
-    grid-column: full-start / col-end 6;
-    padding: 8rem;
-    padding-top: 4rem;
+  background-image: linear-gradient(
+      rgba($color-secondary, 0.93),
+      rgba($color-secondary, 0.93)
+    ),
+    url(../img/house-3.jpeg);
+  background-position: center;
+  background-size: cover;
+  grid-column: full-start / col-end 6;
+  padding: 8rem;
+  padding-top: 4rem;
 
+  display: grid;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+  grid-template-columns: minmax (min-content, max-content);
+  grid-row-gap: 1.5rem;
+  justify-content: center;
+
+  @media (max-width: $bp-medium) {
+    grid-column: 1 / -1;
+  }
+
+  @media (max-width: $bp-small) {
+    padding: 5rem;
+  }
+
+  &__logo {
+    height: 3rem;
+    justify-self: center;
+  }
+
+  &__btn {
+    align-self: start;
+    justify-self: start;
+  }
+
+  &__seenon-text {
     display: grid;
-    grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
-    grid-template-columns: minmax (min-content, max-content);
-    grid-row-gap: 1.5rem;
-    justify-content: center;
+    grid-template-columns: 1fr max-content 1fr;
+    font-size: 1.6rem;
+    color: $color-grey-light-2;
+    align-items: center;
+    gap: 1.5rem;
 
-    @media (max-width: $bp-medium) {
-        grid-column: 1 / -1;
+    &::before,
+    &::after {
+      content: "";
+      height: 1px;
+      display: block;
+      background-color: currentColor;
     }
+  }
 
-    @media (max-width: $bp-small) {
-            padding: 5rem;
+  &__seenon-logos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 3rem;
+    justify-items: center;
+    align-items: center;
+
+    img {
+      max-height: 2.5rem;
+      max-width: 100%;
+      filter: brightness(70%);
     }
-
-    &__logo {
-        height: 3rem;
-        justify-self: center;
-    }
-
-    &__btn {
-        align-self: start;
-        justify-self: start;
-    }
-
-    &__seenon-text {
-        display: grid;
-        grid-template-columns: 1fr max-content 1fr;
-        font-size: 1.6rem;
-        color: $color-grey-light-2;
-        align-items: center;
-        gap: 1.5rem;
-
-        &::before, &::after {
-            content: "";
-            height: 1px;
-            display: block;
-            background-color: currentColor;
-        }
-    }
-
-    &__seenon-logos {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 3rem;
-        justify-items: center;
-        align-items: center;
-
-        img {
-            max-height: 2.5rem;
-            max-width: 100%;
-            filter: brightness(70%);
-        }
-    }
+  }
 }
